- Fixed bug in interface status detection via NetXMS agent
- Added support for NAT'ed nodes (correct interface polling, etc.)
- Backslash (\) character is no longer works as escape character
  inside parameter arguments enclosed in quotes
- Windows console: object tree works correctly for users without rights
  on root objects
- Windows console: implemented user deletion from access lists


*
* 0.1.13
*

- Fixed bug which cause server to hang when deleting unreacheable node
- Added basic checking of node and interface objects to nxdbmgr


*
* 0.1.12
*

- Added new object class - NetworkService, for simplified network service
  health checking
- Server internal synchronization mechanisms improved to increase
  stability and performance
- Fixed deadlock sometimes caused by retrieving DCI collected data
- Added parameters System.Hostname, System.Uname and System.Uptime to
  Solaris subagent
- Object status now recalculated after binding change
- Implemented primary IP address selection for nodes
- Added OSPF support detection
- Fixed bug with StartupDelay parameter handling in core agent
- Fixed communication problems on FreeBSD
- Bug #0000003 fixed
- Bug fixed: objects was not marked as modified when platform name or agent
  version changes
- Windows console: implemented cell edit by double click in policy editor
- Implemented external command execution under UNIX


*
* 0.1.11
*

- Fixed incorrect behavior of Process.Count() parameter under Linux and
  FreeBSD


*
* 0.1.10
*

- Support for centralized upgrade added to agents
- Implemented agent packages upload to server from console
- New parameters added to Solaris subagent
- Alarm deletion implemented
- Implemented all delta calculation methods for DCI
- Implemented thresholds for average values
- Fixed bug with policy editor header drawing


*
* 0.1.9
*

- Added support for server modules
- Initial version of web interface created (for Microsoft IIS)
- Microsoft SQL driver improved