@@ -257,6 +257,7 @@ typedef void * NXC_SESSION;
 #define RCC_RESOURCE_BUSY           ((DWORD)35)
 #define RCC_INVALID_PACKAGE_ID      ((DWORD)36)
 #define RCC_INVALID_IP_ADDR         ((DWORD)37)
+#define RCC_ACTION_IN_USE           ((DWORD)38)
 
 
 //
