@@ -49,6 +49,7 @@ protected:
 	afx_msg void OnUpdateActionRename(CCmdUI* pCmdUI);
 	afx_msg void OnActionNew();
 	afx_msg void OnActionProperties();
+	afx_msg void OnActionDelete();
 	//}}AFX_MSG
 	afx_msg void OnListViewDoubleClick(NMITEMACTIVATE *pInfo, LRESULT *pResult);
 	DECLARE_MESSAGE_MAP()
