@@ -11,6 +11,7 @@
 - Windows console: object tree works correctly for users without rights
   on root objects
 - Windows console: implemented user deletion from access lists
+- Implemented action delete
 
 
 *
